synax fix